--- a/Pipfile
+++ b/Pipfile
@@ -3,7 +3,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[[source]]
+url = "http://127.0.0.1:8081/"
+verify_ssl = false
+name = "local"
+
 [packages]
+refstore = { version = "*", index = "local" }
 
 [dev-packages]
 
