--- a/services/Taskfile.yml
+++ b/services/Taskfile.yml
@@ -28,3 +28,7 @@ tasks:
     desc: _
     cmds:
       - pip install git+://git@bitbucket.org:uveyeinc/mlcmn.git#subdirectory=libs/refstore
+  init-elk:
+    desc: _
+    cmds:
+      - docker run -p 5601:5601 -p 9200:9200 -p 5044:5044 -it --name elk sebp/elk
